Update background image (with prompts)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: transparent url("./catpic.jpg") no-repeat center top fixed;
+    background: transparent url("./catpic_withPrompts.jpg") no-repeat center top fixed;
     background-size: auto;
   
 }
