--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     background: transparent url("./catpic_withPrompts.jpg") no-repeat center top fixed;
-    background-size: auto;
+    background-size: contain;
   
 }
 
