--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,8 +16,8 @@
 }
 
 .glow-on-hover {
-    width: 200px;
-    height: 40px;
+    width: 120%;
+    height: 45px;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -26,10 +26,10 @@
     background: linear-gradient(45deg,  #db0f2ab7, #f7a50eda, #fffb00, #49cf6b, #00c3ff, #2f00ff, #7a00ff, #ff00aa,);
     top: -2px;
     left:-2px;
-    background-size: 400%;
-    opacity: 0.85;
+    background-size: 450%;
+    opacity: 0.9;
     color: #fff;   //Button text colour
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     border: none;
     outline: none;
 }
@@ -37,7 +37,7 @@
 
 @keyframes glowing {
     0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
+    50% { background-position: 450% 0; }
     100% { background-position: 0 0; }
 }
 
@@ -66,17 +66,17 @@ canvas {
 //   text-align: center;
 // }
 
+
+//Style of button text when speaking/listening
 code {
-  // background-image: linear-gradient(0deg, rgb(0, 0, 0), rgb(43, 32, 8));
- 
-  // background-clip: text;
-  color: rgb(81, 255, 0);
-  text-shadow: 2px 2px 10px  #c4a300;
-  font: 1em sans-serif;
+  
+  color: white;
+  text-shadow: 2px 2px 10px  blanchedalmond;
+  // font: 1.5rem sans-serif;
   // -webkit-text-fill-color: rgb(0, 0, 0);
   // -webkit-text-stroke-color: #ece7e7;
   // -webkit-text-stroke-width: 0.9px; 
-  // font-size: 25px;
+  font-size: 1.5rem;
 }
 
 h1 {
@@ -87,4 +87,9 @@ h1 {
   // -webkit-text-fill-color: rgb(0, 0, 0);
   // -webkit-text-stroke-color: #131212;
   // -webkit-text-stroke-width: 0.9px; 
+}
+
+//syntax: .divClassName { ... }
+.YourSubtitles{
+  position: static;
 }
