--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     background: transparent url("./catpic_withPrompts.jpg") no-repeat center top fixed;
@@ -16,8 +16,8 @@
 }
 
 .glow-on-hover {
-    width: 110%;
-    height: 40px;
+    width: 120%;
+    height: 45px;
     cursor: pointer;
     position: relative;
     z-index: 0;
@@ -72,24 +72,24 @@ code {
   
   color: white;
   text-shadow: 2px 2px 10px  blanchedalmond;
+  // font: 1.5rem sans-serif;
+  // -webkit-text-fill-color: rgb(0, 0, 0);
+  // -webkit-text-stroke-color: #ece7e7;
+  // -webkit-text-stroke-width: 0.9px; 
   font-size: 1.5rem;
 }
 
 h1 {
-  color: #21DBC6;
-  // color: #333333;
-  // background: #FFFFFF;
-  text-shadow: 2px 2px 5px #FFFFFF, 5px 4px 5px rgba(0, 0, 0, 0.6);
-  font-size: x-large;
+  background-image: linear-gradient(60deg, rgb(251, 255, 0), rgb(255, 44, 72));
+  background-clip: text;
+  font-size: 40px;
+  text-shadow: 5px 5px 20px  #f8e99d;
+  // -webkit-text-fill-color: rgb(0, 0, 0);
+  // -webkit-text-stroke-color: #131212;
+  // -webkit-text-stroke-width: 0.9px; 
 }
 
 //syntax: .divClassName { ... }
-span{
-  color: #ffffff;
-  text-shadow: 2px 2px 10px  blanchedalmond;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-style: italic;
-  font-size: 1.2rem;
-  background: rgba(0, 0, 0, 0.6);
-  width: 105%;
+.YourSubtitles{
+  position: static;
 }
