--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,7 +151,9 @@ span{
   width: 300px;
   height: auto;
   padding-top: 1.5em;
+  opacity: 0.9;
 }
+
 
 .Score{
   width: auto;
@@ -160,15 +162,19 @@ span{
   // border: 2px solid rgb(0, 0, 0);
 }
 
-.GlowLetter{
+.LetterAndHeart{
   margin-bottom: 1.5rem;
-  font-size: 80px;
-  color: #fff;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.GlowLetter{
+  
+  font-size: 80px;
+  color: #fff;
   text-align: center;
-  -webkit-animation: glow 1s ease-in-out infinite alternate;
-  -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
 @keyframes glow {
@@ -177,5 +183,20 @@ span{
   }
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
+}
+
+.Heart{
+  animation: beating 0.7s ease-in-out infinite alternate;
+}
+@keyframes beating {
+  90% {
+    transform: scale(1.0); opacity: 0.9;
+  }
+  95% {
+    transform: scale(1.1); opacity: 0.85;
+  }
+  100% {
+    transform: scale(1.15); opacity: 0.75;
   }
 }
