--- a/src/styles.scss
+++ b/src/styles.scss
@@ -219,4 +219,60 @@ span{
   100% { transform: skewX(0deg); } 
 } 
 
+//Container of top-right buttons
+.PopoverButtons{
+  position: fixed;
+  top: 3em;
+  right: calc(50% - 350px); //relative from centre
+}
 
+//Individual popover button
+#round-button{
+  cursor: pointer;
+  margin: 5px;
+  border-radius: 50%;
+  opacity: 50%;
+  width: 30px;
+  height: 30px;
+  background: whitesmoke;
+  color: rgb(74, 72, 72); 
+  font-size: 1rem;
+}
+#round-button:hover{
+  animation: wiggle 0.7s forwards;
+}
+
+#popover-box{
+  padding: 0.8em;
+  
+  background-color: orange;
+  border-radius: 1.5em;
+  border: grey 2px;
+  opacity: 93%;
+  width: 270px;
+	position: relative;
+
+  color: white;
+  font-style: normal;
+  font-family: Verdana, sans-serif;
+  font-size: 1rem;
+  line-height: 1.3;
+  text-align: center;
+
+}
+#popover-box:before{
+  content: '';
+  opacity: 93%;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 12px solid transparent;
+	border-bottom-color: orange;
+	border-top: 0;
+	margin-left: -10px;
+	margin-top: -10px;
+
+  animation: wiggle 0.5s forwards;
+}
