--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,9 @@
     margin: 0;
     padding: 0;
 
+    width: 100%;
+    height: 100vh;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -142,31 +145,9 @@ span{
 }
 
 
-.Subtitles{
-  width: 300px;
-  height: auto;
-  padding-top: 1.5em;
-  opacity: 0.9;
-}
-.Subtitles:hover{
-  animation: zoomin 0.3s forwards  ;
-}
-@keyframes zoomin {
-  from {
-    transform: scale(1.0); 
-  }
-  to{
-    transform: scale(1.3); 
-  }
-}
 
 
-.Score{
-  width: auto;
-  height: auto;
-  margin: 1.5em;
-  // border: 2px solid rgb(0, 0, 0);
-}
+
 
 .LetterAndHeart{
   margin-bottom: 1.5rem;
@@ -262,7 +243,7 @@ span{
 
 
 .popover-box{
-  z-index: 2 ;
+
   padding: 0.8em;
   
   background-color: orange;
@@ -294,6 +275,70 @@ span{
 	border-top: 0;
 	margin-left: -10px;
 	margin-top: -10px;
+}
 
-  animation: wiggle 0.5s forwards;
+.speech-bubble{
+  z-index: 1;
+  margin: 5px;
+  padding: 0.6em;
+  
+  background-color: rgb(77, 14, 224);
+  border-radius: 10px;
+  // border: grey 2px;
+  opacity: 93%;
+  width: auto;
+  height: 105%;
+	position: relative;
+
+  color: white;
+  font-style: normal;
+  font-family: Verdana, sans-serif;
+  font-size: 1rem;
+  line-height: 1.3;
+  text-align: center;
+
+}
+.speech-bubble:before{
+  content: "";
+  position: absolute;
+  top: 90%;
+  left: 43%;
+  height: 1em;
+  width: 1em;
+  background: inherit;
+  clip-path: polygon(0 0, 100% 0, 50% 100%);
+}
+.speech-bubble:hover{
+  animation: zoomin 0.3s forwards  ;
+}
+
+.emoji-face{
+  margin-top: 10px;
+  font-size: 1.8em;
+  animation: wiggle 0.7s forwards;
+  opacity: 80%;
+}
+.emoji-face:hover{
+  animation: zoomin 0.3s forwards  ;
+}
+
+
+.emoji-and-bubble{
+  align-items: center;
+}
+
+.Subtitles{
+  width: auto;
+  height: auto;
+  padding-top: 1.5em;
+  opacity: 0.9;
+}
+
+@keyframes zoomin {
+  from {
+    transform: scale(1.0); 
+  }
+  to{
+    transform: scale(1.3); 
+  }
 }
