--- a/src/styles.scss
+++ b/src/styles.scss
@@ -298,13 +298,12 @@ span{
   animation: wiggle 0.5s forwards;
 }
 
-#speech-bubble{
+.speech-bubble{
   margin: 5px;
   padding: 0.6em;
   
   background-color: rgb(77, 14, 224);
   border-radius: 10px;
-  // border: grey 2px;
   opacity: 90%;
   width: auto;
   height: auto;
@@ -314,11 +313,10 @@ span{
   font-style: normal;
   font-family: Verdana, sans-serif;
   font-size: 1rem;
-  line-height: 1.3;
   text-align: center;
 
 }
-#speech-bubble:before{
+.speech-bubble:before{
   content: "";
   position: absolute;
   top: 90%;
@@ -347,5 +345,7 @@ span{
 #emoji-and-bubble{
   align-items: center;
   margin-top: 2em;
+  height: auto;
+  width: 300px;
 
 }
