--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 .main{
   background: transparent  no-repeat center top fixed;
-  background-image: url("./catpic_withPrompts.jpg");
+  background-image: url("./catpic.jpg");
   background-size: auto 100%;
   display: flex;
   width: 100%;
